# DUNEAna

./: .gitignore  CMakeLists.txt  install.sh  setup.sh
LinkMe/ART/devel/localProducts_garsoft_develop_e15_debug/garsoft/v01_01_01/fcl/: GArG4_Jan.fcl  GENIE.fcl  Geometry_Jan.fcl  SingleParticle.fcl  SingleParticle_Jan.fcl  evd3D_Jan.fcl  prodgenie_Jan.fcl
LinkMe/Geometry/dunendggd/duneggd/Active/: NDHPgTPC_Jan.py
LinkMe/Geometry/dunendggd/duneggd/Config/: NDHPgTPC_Jan.cfg
Reconstruction/: CMakeLists.txt
Reconstruction/input/: ND_Strawman_Concept_v01.gdml  ND_Strawman_Concept_v01.root  TGeo_Simple.root
Reconstruction/source/: EcalCluster.cxx  EcalCluster.h  EcalFunctions.cxx  EcalFunctions.h  EcalHit.cxx  EcalHit.h
Reconstruction/test/: TestReco.cxx
source/: CMakeLists.txt
source/include/: Looper.h  Utils.h
source/main/: duneana.cpp  duneplot.cpp  edepana.cpp
source/src/: Looper.cpp  Utils.cpp
